@@ -5,32 +5,49 @@ apply plugin: 'maven-publish'
 group='com.github.talkable'
 
 android {
-    namespace 'com.talkable.sdk'
-    compileSdkVersion Integer.parseInt(project.sdk_compile_sdk)
+    namespace = 'com.talkable.sdk'
+    compileSdk = Integer.parseInt(project.sdk_compile_sdk)
 
     defaultConfig {
-        minSdkVersion Integer.parseInt(project.sdk_min_sdk)
-        targetSdkVersion Integer.parseInt(project.sdk_target_sdk)
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        minSdk = Integer.parseInt(project.sdk_min_sdk)
+        testInstrumentationRunner = 'androidx.test.runner.AndroidJUnitRunner'
 
         // Required for sdk version retrieval to work as of Android Studio 4.1.0: https://issuetracker.google.com/issues/158695880
         buildConfigField 'int', 'VERSION_CODE', "${project.sdk_version_code}"
         buildConfigField 'String', 'VERSION_NAME', "\"${project.sdk_version_name}\""
     }
+    buildFeatures {
+        buildConfig = true
+    }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled = false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
 
     testOptions {
+        // targetSdk on library modules only applies to instrumented tests as of AGP 9
+        targetSdk = Integer.parseInt(project.sdk_target_sdk)
         unitTests.returnDefaultValues = true
+        unitTests.all {
+            // PowerMock 1.6.6/Objenesis need reflective access that JDK 17+ encapsulates
+            jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+                    '--add-opens=java.base/java.util=ALL-UNNAMED',
+                    '--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED',
+                    // OkHttp 3.2.0 reflects into the JDK's SSL internals on the test JVM
+                    '--add-opens=java.base/sun.security.ssl=ALL-UNNAMED'
+        }
     }
     lint {
-        abortOnError false
+        abortOnError = false
     }
-    buildToolsVersion project.android_build_tools
+    buildToolsVersion = project.android_build_tools
 
     publishing {
         singleVariant('release') {
@@ -60,14 +77,12 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
 
-    testImplementation 'org.mockito:mockito-core:1.10.19'
-    testImplementation('org.powermock:powermock-api-mockito:1.6.6') {
+    testImplementation 'org.mockito:mockito-core:2.28.2'
+    testImplementation('org.powermock:powermock-api-mockito2:2.0.9') {
         exclude module: 'hamcrest-core'
-        exclude module: 'objenesis'
     }
-    testImplementation('org.powermock:powermock-module-junit4:1.6.6') {
+    testImplementation('org.powermock:powermock-module-junit4:2.0.9') {
         exclude module: 'hamcrest-core'
-        exclude module: 'objenesis'
     }
 
     androidTestImplementation 'androidx.annotation:annotation:1.8.2'
